--- a/exercicio10/index.html
+++ b/exercicio10/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Exercicio 10</h1>
+    <p>Calcular a meia de alunos</p>
+
+    <form >
+        <label >Escreva a sua </label>
+    </form>
 </body>
 </html>
