--- a/exercicio10/index.html
+++ b/exercicio10/index.html
@@ -4,13 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <h1>Exercicio 10</h1>
     <p>Calcular a meia de alunos</p>
 
-    <form >
-        <label >Escreva a sua </label>
+    <hr>
+    <form id="painel_formulario">
+        <label >Nome</label>
+        <input id="nome"><br>
+        <label>Nota 1</label>
+        <input type="number" id="nota1"><br>
+        <label >Nota 2</label>
+        <input type="number" id="nota2"><br>
+        <label>Nota 3</label>
+        <input type="number" id="nota3"><br>
+        <label>Nota 4</label>
+        <input type="number" id="nota4"><br>
+        <button type="button"onclick="fnCalcularMeia()">Calcular</button>
     </form>
+<div id="painel_resultado">
+    <h3>
+        Média:
+        <span id="nome_resultado"></span>
+        <span id="media"></span>
+    </h3>
+    <button type="button" onclick="fnExibir('formulario')">Calcular a média de outro aluno</button>
+</div>
+    <script src="app.js"></script>
 </body>
 </html>
