--- a/bonus001/index.html
+++ b/bonus001/index.html
@@ -26,6 +26,11 @@
     </div>
     <audio src="sounds/hihat.wav" id="som-70"></audio>
 
+    <div>
+        g - kick
+    </div>
+    <audio src="sounds/kick.wav" id="som-71"></audio>
+
         83-s
         68-d
         70-f
