--- a/exercicio13/index.html
+++ b/exercicio13/index.html
@@ -9,8 +9,11 @@
     crossorigin="anonymous">">
 </head>
 <body>
+    <div class="container">
     <h1>exercicio 013</h1>
     <blockquote>"não me venha com esse papo de meprego, o que eu quero é sossego"</blockquote>
     <p>13 Armazenando lista de carros de um estacionamento</p>
+    <hr>
+    </div>
 </body>
 </html>
