criando a index principal

--- a/exercicio10/index.html
+++ b/exercicio10/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Exercicio 10</h1>
-    <p>Calcular a meia de alunos</p>
+    <p>Calcular a media de alunos</p>
 
     <hr>
     <form id="painel_formulario">
