--- a/exercicio13/index.html
+++ b/exercicio13/index.html
@@ -55,6 +55,19 @@
             </div>
         </div>
     </div>
+
+
+
+
+
+    <div class="card" style="width: 18rem;">
+  <img src="https://cdn.pixabay.com/photo/2023/06/09/07/16/cat-8051016_1280.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
     <script src="app.js"></script>
 </body>
 </html>
